syntax = "proto3";

package ampb;

import "ampb/anime_movie.proto";
import "shpb/anime_resource.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/ampb";

message CreateAnimeMovieRequest { 
    AnimeMovieRequest animeMovie = 1;
    shpb.AnimeResourceRequest resources = 2;
}

message CreateAnimeMovieResponse { 
    AnimeMovieResponse animeMovie = 1;
    shpb.AnimeResourceResponse resources = 2;
 }